# pagmoNet

./: .gitignore  CONTRIBUTING.md  LICENSING.md  README.md  WORK_LOG.md
.ai/: 1.0_FINAL_REVIEW.md  1.0_RELEASE_CHECKLIST.md  AGENT.md  CODE_REVIEW.md  LINUX_TESTING_HANDOFF.md  PAGMO4J_PLAN.md  RELEASE_CHECKLIST.md  ROADMAP.md  SIZE_T_STRATEGY.md  THREAD_CLONEABLE_PROBLEM.md
.github/workflows/: _build-base-dotnet.yml  _build-base-java.yml  build-dotnet-ipopt.yml  build-dotnet.yml  build-java-ipopt.yml  build-java.yml  build.yml  release-dotnet-ipopt.yml  release-dotnet.yml  release-java-ipopt.yml  release-java.yml
PagmoNet4j/: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  RELINKING.md  THIRD_PARTY_LICENSES.md  build.gradle.kts  gradle.properties  settings.gradle.kts
PagmoNet4j.ipopt/: CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  THIRD_PARTY_LICENSES.md  build.gradle.kts  gradle.properties
PagmoNet4j.ipopt/cleanroom/: build.gradle.kts
PagmoNet4j.ipopt/cleanroom/src/main/java/cleanroom/: CleanRoomMain.java
PagmoNet4j.ipopt/scripts/: build-native.ps1
PagmoNet4j/cleanroom/: build.gradle.kts  settings.gradle.kts
PagmoNet4j/cleanroom/src/main/java/cleanroom/: CleanRoomMain.java
PagmoNet4j/core/: build.gradle.kts
PagmoNet4j/core/src/main/java/io/github/pagmonet/pagmonet4j/: NativeInterop.java  NativeLoader.java  OptionalSolverAvailability.java  SizeTInterop.java
PagmoNet4j/core/src/main/java/io/github/pagmonet/pagmonet4j/algorithms/: AlgorithmCallbackAdapter.java  AlgorithmInterop.java  IAlgorithm.java  IAlgorithmLogLine.java  grid_search.java
PagmoNet4j/core/src/main/java/io/github/pagmonet/pagmonet4j/batchevaluators/: BfeBridge.java  BfeInterop.java  ManagedThreadBfe.java
PagmoNet4j/core/src/main/java/io/github/pagmonet/pagmonet4j/migration/: FairReplaceAdapter.java  IRPolicy.java  ISPolicy.java  RPolicyCallbackAdapter.java  SPolicyCallbackAdapter.java  SelectBestAdapter.java
PagmoNet4j/core/src/main/java/io/github/pagmonet/pagmonet4j/problems/: DeferredExceptionHolder.java  (+5 more)
PagmoNet4j/core/src/main/java/io/github/samthegliderpilot/pagmonet4j/: NativeInterop.java  NativeLoader.java  OptionalSolverAvailability.java  SizeTInterop.java
PagmoNet4j/core/src/test/java/io/github/pagmonet/pagmonet4j/: ArchipelagoTest.java  BfeTest.java  DoubleVectorTest.java  GradientCallbackEndToEndTest.java  IslandTest.java  ManagedProblemPipelineTest.java  MigrationPolicyTest.java  NativeLoaderTest.java  PopulationTest.java  SWIGTestUtils.java
PagmoNet4j/core/src/test/java/io/github/samthegliderpilot/pagmonet4j/: ArchipelagoTest.java  BfeTest.java  DoubleVectorTest.java  GradientCallbackEndToEndTest.java  IslandTest.java  ManagedProblemPipelineTest.java  MigrationPolicyTest.java  NativeLoaderTest.java  PopulationTest.java  SWIGTestUtils.java
PagmoNet4j/docs/: algorithm-selection.md  porting-from-pagmo-net.md
PagmoNet4j/examples/: README.md  build.gradle.kts
PagmoNet4j/kotlin-ext/: build.gradle.kts
PagmoNet4j/pagmoWrapper/: CMakeLists.txt
PagmoNet4j/pagmoWrapper/ipopt_stubs/: IpReturnCodes.hpp  IpTypes.hpp
PagmoNet4j/scripts/: build-native.ps1  regen-swig.ps1
native/: CMakeLists.txt  algorithm_log_projections_more.h  bfe_callback.h  cmaes_log_projection.h  cstrs_log_projection.h  de_log_projection.h  deferred_ipopt.cpp  deferred_ipopt.hpp  dynamic_library.cpp  dynamic_library.hpp  gaco_log_projection.h  ihs_log_projection.h  ipopt_c_interface.h  managed_bridge.cpp  mbh_log_projection.h  nlp_marshaller.cpp  nlp_marshaller.hpp  tuple_adapters.h
pagmo.NET/: .gitignore  CONTRIBUTING.md  Directory.Build.props  LICENSE  NOTICE  README.md  RELEASE_NOTES.md  RELINKING.md  THIRD_PARTY_LICENSES.md  createSwigWrappersAndPlaceThem.ps1
pagmo.NET.ipopt/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Directory.Build.props  NOTICE  Pagmo.NET.Ipopt.csproj  README.md  THIRD_PARTY_LICENSES.md
pagmo.NET.ipopt/Tests/: IpoptSolverTest.cs
pagmo.NET.ipopt/buildTransitive/: Pagmo.NET.Ipopt.targets
pagmo.NET.ipopt/cleanroom/: CleanRoom.csproj  Program.cs
pagmo.NET.ipopt/extensions/: ipopt.cs
pagmo.NET/Examples/Examples.Pagmo.NET/: Examples.Pagmo.NET.csproj  Program.cs
pagmo.NET/Pagmo.NET/: Pagmo.NET.csproj
pagmo.NET/Pagmo.NET/pagmoExtensions/: OptionalSolverAvailability.cs  archipelago.cs
pagmo.NET/Pagmo.NET/pagmoExtensions/Algorithms/: cmaes.cs  compass_search.cs  cstrs_self_adaptive.cs  de.cs  de1220.cs  gaco.cs  gwo.cs  ihs.cs  maco.cs  mbh.cs  moead.cs  moead_gen.cs  nlopt.cs  nsga2.cs  nspso.cs  pso.cs  pso_gen.cs  sade.cs  sea.cs  sga.cs  simulated_annealing.cs  xnes.cs
pagmo.NET/Pagmo.NET/pagmoExtensions/Utils/: multi_objective.projections.cs
pagmo.NET/Tests/Tests.Pagmo.NET/: Test_base_build_verification.cs
pagmo.NET/Tests/Tests.Pagmo.NET/Algorithms/: Test_bee_Colony.cs  Test_optional_solver_availability.cs  Test_pso.cs  Test_sade.cs  Test_sea.cs  Test_sga.cs  Test_simulated_Annealing.cs
pagmo.NET/cleanroom/: CleanRoom.csproj  Program.cs
pagmo.NET/docs/: README.md  algorithm-selection.md  getting-started.md  nuget-readme.md
pagmo.NET/scripts/: build-native.ps1  build-release-artifacts.ps1
ports/pagmo2/: portfile.cmake
scripts/: build-linux-artifacts.sh  build-native.ps1  bundle-native-deps.ps1  setup-wsl.sh
swig/: Pagmo4jSwigInterface.i  PagmoNETSwigInterface.i  shared_core.i
swig/pagmo/: config.hpp  pagmo.hpp
swig/swigInterfaceFiles/: archipelago.i  bfe.i  island.i  population.i
swig/swigInterfaceFiles/algorithms/: bee_colony.i  cmaes.i  compass_search.i  cstrs_self_adaptive.i  de.i  de1220.i  gaco.i  gwo.i  ihs.i  ipopt.i  maco.i  mbh.i  moead.i  moead_gen.i  nlopt.i  nsga2.i  nspso.i  pso.i  pso_gen.i  sade.i  sea.i  sga.i  simulated_annealing.i  snopt7.i  xnes.i
swig/swigInterfaceFiles/r_policies/: fair_replace.i
swig/swigInterfaceFiles/s_policies/: select_best.i
swig/swigInterfaceFiles/topologies/: unconnected.i
swig/swigInterfaceFiles/utils/: multi_objective.i
swig/swigInterfaceFiles/utils/hv_algos/: hv_algorithm.i
triplets/: x64-mingw-static.cmake  x64-windows-static-md.cmake  x64-windows-static.cmake
(+186 files in other folders)
